@@ -1,28 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<web-fragment xmlns="http://java.sun.com/xml/ns/javaee"
-              xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="3.0"
-              xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
-        http://java.sun.com/xml/ns/javaee/web-fragment_3_0.xsd"
-              metadata-complete="true">
-    <!-- ====================================== -->
-    <name>Hasor</name>
-    <ordering>
-        <before>
-            <others/>
-        </before>
-    </ordering>
-
-    <listener>
-        <listener-class>net.hasor.web.startup.RuntimeListener</listener-class>
-    </listener>
-    <filter>
-        <filter-name>hasor_root_filter</filter-name>
-        <filter-class>net.hasor.web.startup.RuntimeFilter</filter-class>
-        <async-supported>true</async-supported>
-    </filter>
-
-    <filter-mapping>
-        <filter-name>hasor_root_filter</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
-</web-fragment>
